<resources>
    <string name="app_name">Bus Driver App</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_login">login</string>
    <string name="phone_number">Contact Number</string>
    <string name="password">Password</string>
    <string name="invalid_mobile">Invalid Mobile Number</string>
    <string name="url_login">/Token</string>

    <string name="empty_mobile">Please insert your mobile number</string>
    <string name="empty_password">Please insert your password</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_pass">Password must be minimum 6 characters</string>
    <string name="bad_credentials">The user name or password is incorrect.</string>
    <string name="url_route">/api/AppAccount/GetRouteListBusDriver</string>
    <string name="url_token">/api/AppAccount/SaveMobileAppToken</string>
    <string name="msg_send_to_admin">Children not present? Would you like to inform bus admin about that?</string>
    <string name="app_token">634475897</string>
    <string name="menu1">menu1</string>
    <string name="logout">Logout</string>


    <string name="bus_name">Bus Name</string>
    <string name="driverName">DriverName</string>
    <string name="route_name">Route Name </string>
    <string name="child_count">  Child Count</string>
    <string name="check_count"> Check Point</string>
    <string name="title_activity_route">Route</string>
    <string name="bus_number">Bus No</string>
    <string name="driver_number">Driver Number</string>
    <string name="driver_name">Driver Name </string>
    <string name="select_user"> Select User</string>
    <string name="select_category">Select Category</string>
    <string name="select_date">Select Date</string>
    <string name="end_time">End Time</string>
    <string name="start_time">Start Time</string>
    <string name="end_Date">End Date</string>
    <string name="start_Date">Start Date</string>
    <string name="empty_string">Please insert Valid Information </string>
    <string name="title_activity_request">RequestActivity</string>
</resources>
